# holon

./: README.md  pyproject.toml
examples/formats/: openapi_examples.py
holon/: base.py  design_system.py  headers.py  http.py  media_types.py  principles.py  writing.py
holon/conventions/: case.py  json.py  uri.py
holon/formats/: alps.py  openapi.py
holon/ietf/: rfc2119.py  rfc7232.py
holon/models/: rmm.py  wadm.py
holon/protocols/: http.py
tests/: test_holon.py
