[tool.poetry]
name = "holon"
version = "0.1.0"
description = "Experimental API Design Dystem library"
authors = ["Stephen Mizell <smizell@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/smizell/holon"
repository = "https://github.com/smizell/holon"

[tool.poetry.dependencies]
python = ">3.6"
pydantic = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^20.8b1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
